Fix Software Update for Java bindings and sample app
Signed-off-by: Larry Sachs <larry.j.sachs@intel.com>